<resources>
    <string name="app_name">RafiLabotry</string>
    <string name="text">Rafi Medical Labotry</string>
    <string name="Enter_username">Enter username</string>
    <string name="Enter_password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="Login">Login</string>
    <string name="Create_account">Create \nAccount</string>
    <string name="Enter_fullname">Full Name</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="Next">Next</string>
    <string name="verify_code">Varify</string>


</resources>
