<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    android:padding="30dp"
    android:transitionName="transition_login"
    tools:context=".Common.LoginSignup.Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginback_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/backprees_icon"
            android:transitionName="transition_backview_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_black"
            android:text="Login"
            android:textAllCaps="true"
            android:textColor="@color/colorblack"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Enter_username"
                android:textColorHint="@color/colorblack"
                app:boxStrokeColor="@color/colorblack"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorblack"
                app:startIconDrawable="@drawable/person_icon"
                app:startIconTint="@color/colorblack">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:inputType="text"
                    android:textColor="@color/colorblack">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Enter_password"
                android:textColorHint="@color/colorblack"
                app:boxStrokeColor="@color/colorblack"
                app:boxStrokeWidth="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorblack"
                app:startIconDrawable="@drawable/password_icon"
                app:startIconTint="@color/colorblack">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:inputType="textPassword"
                    android:textColor="@color/colorblack">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/colorblack"
                    android:text="@string/remember_me"
                    android:textColor="@color/colorblack" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="#00000000"
                    android:text="@string/forget_password"
                    android:textAlignment="center" />


            </RelativeLayout>

            <Button
                android:id="@+id/direct_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorblack"
                android:text="@string/Login"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"></Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/colorbackground"
                android:text="@string/Create_account"
                android:textAllCaps="true"
                android:textColor="@color/colorblack"
                android:textSize="18sp"></Button>

        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>