<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    android:padding="30dp"
    tools:context=".Common.LoginSignup.SignUp3rdClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signupback_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/backprees_icon"
            android:transitionName="transition_backview_btn" />

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/Create_account"
            android:textAllCaps="true"
            android:textColor="@color/colorblack"
            android:textSize="40sp"
            android:transitionName="transition_titleview_txt"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <com.hbb20.CountryCodePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_border" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:textColorHint="@color/colorblack"

                    app:boxStrokeColor="@color/colorblack"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorblack"
                    app:startIconDrawable="@drawable/phone_icon"
                    app:startIconTint="@color/colorblack">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli"
                        android:inputType="number">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/signup_next3_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#000000"
            android:elevation="5dp"
            android:fontFamily="@font/muli"
            android:text="@string/Next"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/signup_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorbackground"
            android:elevation="5dp"
            android:fontFamily="@font/muli"
            android:text="@string/Login"
            android:textColor="@color/colorblack"
            android:transitionName="transition_login_btn" />


    </LinearLayout>

</ScrollView>